--- a/assets/sass/_vars.scss
+++ b/assets/sass/_vars.scss
@@ -41,7 +41,7 @@ $very-dark-gray: #444;
 
 // Terminal aesthetic (green-on-dark), shared with form styling.
 $terminal-green: #1eb100;
-$terminal-green-bg: #203f00;
+$terminal-green-bg: #102000;
 
 // Selection highlight.
 $selection-bg: #b3d4fc;
